[project]
authors = [{name = "Katherine Rosenfeld", email = "56368533+krosenfeld-IDM@users.noreply.github.com"}]
dependencies = []
name = "IHME_vaccine_rasters"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ihme_vaccine_rasters = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
gdal = ">=3.10.2,<4"
tqdm = ">=4.67.1,<5"
